# musical-games

./: .coveragerc  .gitchangelog.rc  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: Makefile  authors.rst  conf.py  history.rst  index.rst  installation.rst  make.bat  modules.rst  musical_games.converters.rst  musical_games.dice_games.lilypond.rst  musical_games.dice_games.rst  musical_games.rst  usage.rst
musical_games/: __init__.py  __version__.py  base.py  shell_utils.py  utils.py
musical_games/converters/: audio.py  images.py  lilypond.py  utils.py
musical_games/dice_games/: __init__.py  base.py  composers.py  composition_managers.py  compositions.py  data_csv.py  dice_game.py  dice_games.py  factory.py  (+6 more)
scripts/: __init__.py  change_layout.py  convert_bars.py  convert_midi.py  convert_old_bars.py  convert_score.py  copy_bars.py  cpe_bach_test.py  create_composition.py  demo_calegari_aria.py  demo_cpe_bach.py  demo_gerlach_scottish_dance.py  demo_haydn_meneut_trio.py  demo_kirnberger_meneut_trio.py  demo_kirnberger_polonaise.py  demo_mozart_contredanse.py  demo_mozart_waltz.py  demo_stadler_meneut_trio.py  generate_statics.py  kirnberger_meneut_trio.py  kirnberger_polonaise.py  lilypond_converter.py  lilypond_copy.py  lilypond_copy2.py  mozart_waltz.py  new_composition.py  split_bars.py  stadler_meneut_trio.py  test_composition.py  test_dice_game.py  test_lilypond_converter.py  to_bar_file.py  to_voices.py
tests/: test_dice_games.py  test_musical_games.py
(+153 files in other folders)
