[project]
name = "musical_games"
description = "Implementation of musical dice games from the 18th century."
readme = "README.rst"
version = "0.9.1"
requires-python = ">=3.12"
keywords = ["Musical games", "Dice games", "Piano music"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
license = { file="LICENSE" }
authors = [
    { name = "Robbert Harms", email = "robbert@xkls.nl" }
]
dependencies = [
    "Jinja2~=3.1.5",
    "frozendict~=2.4.6"
]

[project.optional-dependencies]
test = [
    "pytest~=8.0.2",
    "pytest-check~=2.3.1",
    "pytest-cov~=4.1.0",
    "pytest-html~=4.1.1",
    "tox~=4.14.1"
]
doc = [
    "sphinx~=7.2.6"
]

[project.scripts]
musical-games = "musical_games.cli:app"

[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"
